fixed subheading alignment

--- a/superttt/style.css
+++ b/superttt/style.css
@@ -12,6 +12,8 @@ h1 {
 }
 
 #selection-heading {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
